deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-buffett
  labels:
    cloud.sealos.io/app-deploy-manager: personal-buffett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-buffett
  template:
    metadata:
      labels:
        app: personal-buffett
    spec:
      containers:
        - name: personal-buffett
          image: ghcr.io/sodawaitress/personal-buffett:main
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: personal-buffett-data
